finial commit of color fliper project

--- a/Color Fliper/index.html
+++ b/Color Fliper/index.html
@@ -24,7 +24,7 @@
     </nav>
     <main>
       <div class="container">
-        <h2>Background Color: <span class="color">#F1f5f8</span></h2>
+        <h2>Background Color: <span class="color">White</span></h2>
         <button class="btn btn-hero" id="btn">CLICK ME</button>
       </div>
     </main>
