--- a/Color Fliper/hex.html
+++ b/Color Fliper/hex.html
@@ -14,16 +14,16 @@
   <body>
     <nav>
       <div class="nav-center">
-        <h4>color flipper</h4>
+        <h4>COLOR FLIPPER</h4>
         <ul class="nav-links">
-          <li><a href="index.html">simple</a></li>
-          <li><a href="hex.html">hex</a></li>
+          <li><a href="index.html">SIMPLE</a></li>
+          <li><a href="hex.html">HEX</a></li>
         </ul>
       </div>
-    </nav>
+    </nav> 
     <main>
       <div class="container">
-        <h2>background color : <span class="color">#f1f5f8</span></h2>
+        <h2>background color : <span class="color">#FFFFFF</span></h2>
         <button class="btn btn-hero" id="btn">click me</button>
       </div>
     </main>
